# llmsearch

./: CHANGELOG.md  Cargo.toml  LICENSE  MANUAL.md  README.md  RELEASE.md  syncore_code_graph.db
.planning/: PROJECT.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-project-scaffolding/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md
.planning/phases/02-file-walking/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md
.planning/phases/03-pattern-matching/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md
.planning/phases/04-line-column-calc/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md
.planning/phases/05-context-extraction/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md
.planning/phases/06-json-output/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md
.planning/phases/07-deterministic-ordering/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md
docs/: ADR_CHAT_CONTEXT_PERSISTENCE.md  ADR_LLM_NATIVE_TEXT_TOOLS.md  ADR_LSP_FEEDBACK_GATE.md  LLM_NATIVE_TOOLING_IDEAS.md  PLAN_CHAT_PERSISTENCE_AND_LSP_GATE.md  PLAN_LLM_NATIVE_TOOLSET_SCOPING.md
examples/: README.md  basic-search.sh  glob-filtering.sh  json-output.sh
src/: cli.rs  main.rs
tests/: cli.rs  determinism.rs
(+18 files in other folders)
