[package]
name = "llmsearch"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }  # CLI argument parsing
ignore = "0.4"  # .gitignore-aware file walking
regex = "1.10"  # pattern matching
serde = { version = "1.0", features = ["derive"] }  # JSON serialization
serde_json = "1.0"  # JSON output
uuid = { version = "1.6", features = ["v4", "serde"] }  # execution/match IDs
