[package]
name = "llmsearch"
version = "1.0.0"
edition = "2021"
description = "Deterministic code search with LLM-optimized JSON output"
license = "MIT"
authors = ["llmsearch contributors"]
keywords = ["search", "cli", "llm", "code-search"]
repository = "https://github.com/yourusername/llmsearch"

[dependencies]
clap = { version = "4.5", features = ["derive"] }  # CLI argument parsing
ignore = "0.4"  # .gitignore-aware file walking
regex = "1.10"  # pattern matching
serde = { version = "1.0", features = ["derive"] }  # JSON serialization
serde_json = "1.0"  # JSON output
uuid = { version = "1.6", features = ["v4", "serde"] }  # execution/match IDs

[dev-dependencies]
assert_cmd = "2.0"  # CLI integration testing
predicates = "3.1"  # Predicate-based assertions for testing
